<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#F4ECEC"
    tools:context=".ResetPassword">

    <TextView
        android:layout_width="285dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/alegreya_sc_black"
        android:text="@string/reset_password"
        android:textAlignment="center"
        android:textColor="@color/blueWhite"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/resetEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/strock_edit"
        android:drawablePadding="5dp"
        android:fontFamily="@font/cardo_bold"
        android:hint="@string/email"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textSize="20sp" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="100dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/strock_btn"
        android:fontFamily="@font/gabriela"
        android:text="@string/send"
        android:textSize="20sp"
        android:textStyle="bold"
        app:backgroundTint="@color/blueWhite" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>

</LinearLayout>