<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#F4ECEC"
    tools:context=".UpdateProfileActivity">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/updateProfileImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:src="@color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:fontFamily="casual"
        android:text="@string/click_to_change_the_image"
        android:textColor="#000000"
        android:textSize="22sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/updateProfileUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/strock_edit"
        android:drawablePadding="5dp"
        android:fontFamily="@font/cardo_bold"
        android:padding="10dp"
        android:text="@string/user_name"
        android:textColor="#202020"
        android:textSize="20sp"
        android:textStyle="normal" />

    <Button
        android:id="@+id/updateProfileButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="60dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/strock_btn"
        android:fontFamily="@font/gabriela"
        android:text="@string/update"
        android:textSize="20sp"
        android:textStyle="bold"
        app:backgroundTint="@color/blueWhite" />


</LinearLayout>